--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.0.0",
+    "react-scroll": "^1.9.0",
     "react-tooltip": "^5.21.5",
     "vite-plugin-react": "^4.0.1"
   },
