--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0 && stylelint \"**/*.css\"",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -37,7 +37,13 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "postcss": "^8.4.29",
+    "stylelint": "^16.4.0",
+    "stylelint-config-standard": "^36.0.0",
     "tailwindcss": "^3.3.3",
     "vite": "^4.4.5"
+  },
+  "stylelint": {
+    "extends": "stylelint-config-standard",
+    "rules": {}
   }
 }
