--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,10 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "nodemailer": "^6.9.13"
+    "netlify-cli": "^17.23.1",
+    "netlify-lambda": "^2.0.16",
+    "node-addon-api": "^8.0.0",
+    "nodemailer": "^6.9.13",
+    "serverless-http": "^3.2.0"
   }
 }
