--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,11 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+# Dependency directories
+node_modules/
 
-node_modules
-dist
-dist-ssr
-*.local
+# Environment variables file
+.env
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# IDE/editor specific files
+.vscode/
+
+# Netlify specific files
+.netlify/
