--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@netlify/functions": "^2.6.3",
+    "@types/express": "^4.17.21",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "netlify-cli": "^17.23.1",
