--- a/netlify.toml
+++ b/netlify.toml
@@ -5,7 +5,7 @@
   external_node_modules = ["express"]
   node_bundler = "esbuild"
 
-[[redirects]]
+[redirects]
   force = true
   from = "/api/*"
   status = 200
