--- a/netlify.toml
+++ b/netlify.toml
@@ -8,5 +8,5 @@
 [redirects]
   force = true
   from = "/api/*"
+  to = "/.netlify/functions/api/:splat"
   status = 200
-  to = "/netlify/functions/api/:splat"
