--- a/netlify.toml
+++ b/netlify.toml
@@ -7,7 +7,7 @@
   external_node_modules = ["express"]
   node_bundler = "esbuild"
 
-[redirects]
+[[redirects]]
   force = true
   from = "/api/*"
   to = "/.netlify/functions/api/:splat"
