--- a/netlify.toml
+++ b/netlify.toml
@@ -9,5 +9,5 @@
 [[redirects]]
   force = true
   from = "/api/*"
-  to = "/.netlify/functions/api/:splat"
+  to = "/netlify/functions/api/:splat"
   status = 200
