--- a/netlify.toml
+++ b/netlify.toml
@@ -1,13 +1,5 @@
 [build]
-  command = "echo Building Functions"
-  base = "/"
+  functions = "functions"
 
-[functions]
-  external_node_modules = ["express"]
-  node_bundler = "esbuild"
-
-[[redirects]]
-  force = true
-  from = "/api/*"
-  to = "/netlify/functions/api/:splat"
-  status = 200
+[dev]
+  publish = "dist"
