--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^6.0.0",
     "react-scroll": "^1.9.0",
     "react-tooltip": "^5.21.5",
+    "react-type-animation": "^3.2.0",
     "vite-plugin-react": "^4.0.1"
   },
   "devDependencies": {
